k8s/cluster/nginx-ingress/shooter-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shooter-admin-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: admin.shooter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shooter-server-api-gateway-admin-cluster-ip-service
                port:
                  number: 8080
